--- a/package.json
+++ b/package.json
@@ -5,25 +5,28 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
     "prebuild": "rm -rf dist",
-    "prepare": "npm run build"
+    "build": "tsc && npm run copy-files",
+    "copy-files": "mkdir -p dist/auth && cp src/auth/success.html dist/auth/",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts"
   },
   "dependencies": {
     "@auth/core": "^0.18.0",
-    "blessed": "^0.1.81",
-    "commander": "^11.0.0",
-    "open": "^9.1.0",
-    "keytar": "^7.9.0",
     "@workos-inc/node": "7.31.0",
-    "dotenv": "^16.0.0"
+    "blessed": "^0.1.81",
+    "boxen": "^7.0.0",
+    "chalk": "^5.0.1",
+    "commander": "^11.0.0",
+    "dotenv": "^16.0.0",
+    "keytar": "^7.9.0",
+    "open": "^9.1.0",
+    "ora": "^6.1.2"
   },
   "devDependencies": {
     "@types/blessed": "^0.1.22",
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0"
   }
-} 
+}
