--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,11 @@
     "moduleResolution": "NodeNext",
     "outDir": "./dist",
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "rootDir": "./src",
-    "preserveSymlinks": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 } 
