--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "build": "tsc && npm run copy-files",
     "copy-files": "mkdir -p dist/auth && cp src/auth/success.html dist/auth/",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@auth/core": "^0.18.0",
+    "@types/jest": "^29.5.14",
     "@workos-inc/node": "7.31.0",
     "blessed": "^0.1.81",
     "boxen": "^7.0.0",
     "chalk": "^5.0.1",
     "commander": "^11.0.0",
     "dotenv": "^16.0.0",
+    "jest": "^29.7.0",
     "keytar": "^7.9.0",
     "open": "^9.1.0",
-    "ora": "^6.1.2"
+    "ora": "^6.1.2",
+    "ts-jest": "^29.2.5"
   },
   "devDependencies": {
     "@types/blessed": "^0.1.22",
