--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "copy-files": "mkdir -p dist/auth && cp src/auth/success.html dist/auth/",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "test": "jest",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
