--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.18.0",
+    "@napi-rs/keyring": "^1.1.6",
     "@types/jest": "^29.5.14",
     "@workos-inc/node": "7.31.0",
     "blessed": "^0.1.81",
@@ -24,7 +25,6 @@
     "commander": "^11.0.0",
     "dotenv": "^16.0.0",
     "jest": "^29.7.0",
-    "keytar": "^7.9.0",
     "open": "^9.1.0",
     "ora": "^6.1.2",
     "ts-jest": "^29.2.5"
